compiler/stage0/tests/snapshots/diagnostic__tests_fixtures_diagnostics_syntax_tuple_item_missing_comma.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/diagnostics/syntax/tuple_item_missing_comma.ml

compile:
status: failure(1)
stdout:
<empty>
stderr:
Error: stage0::source

  × could not parse Riot ML source
   ╭─[tests/fixtures/diagnostics/syntax/tuple_item_missing_comma.ml:2:23]
 1 │ fn main() {
 2 │   let pair = ("token" "parser");
   ·                       ────┬───
   ·                           ╰── expected `,` between tuple items
 3 │   println("unreachable")
   ╰────
  help: insert a comma before the next item
